# Dictionary

./: CMakeLists.txt  boost.cmake  client.cpp  libs.cmake  pqxx.cmake  sc.bat  server.cpp  sql.conf  sql_edit.cpp
categories/: ANIMAL_SOUNDS.txt  DOMESTIC_ANIMALS.txt
categories_sql/: WILD_ANIMALS.txt
client/: build.cpp  client.h  play.cpp  request.cpp  request.h
helpfoo/: constanst.cpp  definitions.h  detect_encode.cpp  detect_encode.h  hfoo.cpp  hfoo.h  wjson.cpp  wjson.h
load_options/: po.cpp  po.h
loader/: loader.cpp  loader.h  mthread.cpp  mthread.h
random/: rand.h
server/: connection.cpp  servloader.cpp  servloader.h
sql/: create_base.cpp  create_base.h  do_connection_str.cpp  do_connection_str.h  sql_translator_build.cpp  sql_translator_build.h
sql_editor/: editor.cpp  editor.h
